# Distillery

./: .gitignore  README.md  build_backend.py  distillerylogo.af  distillerylogo.af~lock~  index.html  main.py  menu_bar.py  reader.py  requirements.txt  sidecar_main.py  summarize.py  tts.py
extension/: README.md  background.js  manifest.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/frontend/: index.html
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
static/: index.html
