[package]
name = "distillery"
version = "1.0.0"
description = "A local, distraction-free AI article reader with on-device TTS"
authors = ["Distillery"]
edition = "2021"

[lib]
name = "distillery_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
